# sectool

./: LICENSE  README.md  pyproject.toml  requirements.txt
sectool/: __main__.py  cli.py
sectool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sectool/core/: codescan.py  context.py  errors.py  findings.py  logging.py  output.py
sectool/modules/: crypto.py  deps.py  packets.py  passwords.py  scan.py  ssl_audit.py
tests/: test_cli.py  test_crypto.py  test_deps.py  test_findings.py  test_output.py  test_passwords.py  test_scan.py
