[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sectool"
version = "1.0.0"
description = "Cybersecurity multi-tool CLI: code, SSL/TLS, dependency, packet, password and crypto auditing"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "sectool contributors" }]
keywords = ["security", "cli", "sast", "ssl", "tls", "cve", "osv", "passwords", "crypto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31,<3",
    "colorama>=0.4.6,<0.5",
    "cryptography>=42",
]

[project.optional-dependencies]
packets = ["scapy>=2.5,<3"]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://example.com/sectool"
Source = "https://example.com/sectool"

[project.scripts]
sectool = "sectool.cli:main"

[tool.setuptools.packages.find]
include = ["sectool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
